--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "atom": ">0.50.0"
   },
   "dependencies": {
+  },
+  "devDependencies": {
+    "coffee-script": "^1.7.1",
+    "coffeelint": "^1.1.0"
   }
 }
