--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "auto-update-packages",
   "main": "./lib/auto-update-packages",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Keep your Atom packages up to date.",
   "repository": "https://github.com/yujinakayama/atom-auto-update-packages",
   "license": "MIT",
-  "os": ["darwin"],
+  "os": [
+    "darwin"
+  ],
   "engines": {
     "atom": ">0.50.0"
   },
